[package]
name    = "janus"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
glob         = "0.3.0"
http         = "0.1.0"
regex        = "1.1.0"
reqwest      = "0.9.0"
scraper      = "0.11.0"
serde        = "1.0.0"
serde_derive = "1.0.0"
serde_yaml   = "0.8.0"
sha2         = "0.8.0"
structopt    = "0.3.0"
colored-diff = "0.2.0"

[dependencies.just_release]
package  = "just"
version  = "0.5.11"
features = ["summary"]

[dependencies.just_dev]
package  = "just"
path     = "../just"
features = ["summary"]
