[package]
name    = "janus"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
glob         = "0.3.0"
http         = "0.2.3"
regex        = "1.4.5"
scraper      = "0.12.0"
serde        = "1.0.125"
serde_derive = "1.0.125"
serde_yaml   = "0.8.17"
sha2         = "0.9.3"
structopt    = "0.3.21"
colored-diff = "0.2.2"

[dependencies.reqwest]
version  = "0.11.2"
features = ["blocking"]

[dependencies.just_release]
package  = "just"
version  = "=1.26.0"

[dependencies.just_dev]
package  = "just"
path     = "../just"
